--- a/src/Components/sass/App.sass
+++ b/src/Components/sass/App.sass
@@ -2,3 +2,9 @@
 @import ./_header
 @import ./_search
 @import ./_logo
+@import ./_autorInfo
+@import ./_repositories
+@import ./_project
+
+.main
+    display: flex
