--- a/src/Components/sass/_project.sass
+++ b/src/Components/sass/_project.sass
@@ -10,6 +10,8 @@
         font-weight: 500
         font-style: normal
         font-size: 24px
+        text-decoration: none
+        display: inline-block
     .project_description
         margin: 0px auto 24px 32px
         font-weight: 400
