--- a/src/sass/_autorInfo.sass
+++ b/src/sass/_autorInfo.sass
@@ -9,22 +9,19 @@
     h2
         margin-bottom: 12px
         color: black
-        font-weight: 600
-        font-style: normal
-        font-size: 26px
+        @include style( 26px, 600, normal)
+
     a
         color: $ColorBlue
         text-decoration: none
-        font-size: 18px
-        font-weight: 400
-        font-style: normal
+        @include style( 18px, 400, normal)
+
     .autor_profile
         margin-bottom: 30px
 .follower_wrapper
     span 
-        font-weight: 400
-        font-style: normal
-        font-size: 16px
+        @include style( 16px, 400, normal)
+
     display: flex
     .group_wrapper
         margin-right: 20.01px
