--- a/src/sass/_project.sass
+++ b/src/sass/_project.sass
@@ -7,14 +7,10 @@
         padding-top: 24px
         margin: 0px auto 16px 32px
         color: $ColorBlue
-        font-weight: 500
-        font-style: normal
-        font-size: 24px
+        @include style( 24px, 500, normal)
         text-decoration: none
         display: inline-block
     .project_description
         margin: 0px auto 24px 32px
-        font-weight: 400
-        font-style: normal
-        font-size: 16px
         color: black
+        @include style( 16px, 400, normal)
