--- a/src/sass/_repositories.sass
+++ b/src/sass/_repositories.sass
@@ -3,6 +3,4 @@
 
     h1
         margin: 28px 0px 29px 0px
-        font-weight: 600
-        font-size: 32px
-        font-style: normal
+        @include style( 32px, 600, normal)
