--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -1,6 +1,6 @@
 @import ./_template
 @import ./_header
-@import ./_home
+@import ./_render
 @import ./_search
 @import ./_logo
 @import ./_autorInfo
