--- a/src/sass/_render.sass
+++ b/src/sass/_render.sass
@@ -1,10 +1,10 @@
-.home_wrapper
+.render_wrapper
     height: 90vh
     width: 100%
     display: flex
     justify-content: center
     align-items: center
-    .home
+    .render
         display: flex
         flex-direction: column
         align-items: center
