--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -6,6 +6,9 @@
 @import ./_autorInfo
 @import ./_repositories
 @import ./_project
+@import ./_footer
 
+body 
+    background-color: #E5E5E5
 .main
     display: flex
