--- a/src/sass/_project.sass
+++ b/src/sass/_project.sass
@@ -2,6 +2,7 @@
     width: 877px
     height: 112px
     margin-bottom: 24px
+    background-color: #fff
     //последний 26px отступ margin-bottom project
     .project_title
         padding-top: 24px
