--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -1,4 +1,9 @@
 .footer
+    display: flex
+    justify-content: flex-end
+    width: 75%
+    .amountPaginate
+        margin-right: 23.59px
     ul
         display: flex
         list-style: none
@@ -10,3 +15,5 @@
                 color: white
                 padding: 2px 6px
                 background-color: $ColorBlue
+            &:last-child
+                margin-right: 78px
