--- a/src/sass/_project.sass
+++ b/src/sass/_project.sass
@@ -1,9 +1,12 @@
 .project_wrapper
     width: 877px
-    height: 112px
+    min-height: 112px
     margin-bottom: 24px
     background-color: #fff
-    //последний 26px отступ margin-bottom project
+    border-radius: 6px
+    padding: 0 32px 24px 0
+    &:last-child
+        margin-bottom: 26px
     .project_title
         padding-top: 24px
         margin: 0px auto 16px 32px
