--- a/src/sass/_render.sass
+++ b/src/sass/_render.sass
@@ -18,3 +18,22 @@
             @include style (22px, 400, normal)
             color: #808080
             text-align: center
+.loader_wrapper
+    height: 90vh
+    width: 100%
+    display: flex
+    justify-content: center
+    align-items: center
+    .loader
+        border: 16px solid #f3f3f3
+        border-top: 16px solid #3498db
+        border-radius: 50%
+        width: 120px
+        height: 120px
+        animation: spin 2s linear infinite
+
+@keyframes spin
+    0%
+        transform: rotate(0deg)
+    100%
+        transform: rotate(360deg)
