--- a/src/sass/App.sass
+++ b/src/sass/App.sass
@@ -1,12 +1,9 @@
 @import ./_template
 @import ./_header
 @import ./_render
-@import ./_search
-@import ./_logo
-@import ./_autorInfo
+@import ./_authorInfo
 @import ./_repositories
-@import ./_project
-@import ./_footer
+@import ./_media
 
 body 
     background-color: #e5e5e5
