--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -3,3 +3,17 @@
     height: 72px
     background-color: $ColorBlue
     padding: 16px 0px 16px 0px
+.logo
+    margin-left: 41px
+    margin-right: 22.02px
+    cursor: pointer
+.search_wrapper
+    position: relative
+    input
+        width: 500px
+        height: 40px
+        padding: 8px 0px 8px 44px
+    img
+        position: absolute
+        top: 13px
+        left: 19px
