--- a/src/sass/_authorInfo.sass
+++ b/src/sass/_authorInfo.sass
@@ -4,7 +4,7 @@
         width: 280px
         height: 280px
         border-radius: 50%
-.autor_info
+.author_info
     margin-left: 56.03px
     h2
         margin-bottom: 12px
@@ -16,7 +16,7 @@
         text-decoration: none
         @include style( 18px, 400, normal)
 
-    .autor_profile
+    .author_profile
         margin-bottom: 30px
 .follower_wrapper
     span 
