--- a/src/sass/_render.sass
+++ b/src/sass/_render.sass
@@ -26,7 +26,7 @@
     align-items: center
     .loader
         border: 16px solid #f3f3f3
-        border-top: 16px solid #3498db
+        border-top: 16px solid $ColorBlue
         border-radius: 50%
         width: 120px
         height: 120px
