--- a/src/sass/_repositories.sass
+++ b/src/sass/_repositories.sass
@@ -4,3 +4,50 @@
     h1
         margin: 28px 0px 29px 0px
         @include style( 32px, 600, normal)
+.repos_wrapper
+    display: flex
+    flex-direction: column
+.pagination_wrapper
+    display: flex
+    justify-content: flex-end
+
+    .amountPaginate
+        margin-right: 23.59px
+        @include style(14px, 400 , normal)
+        color: #808080
+    ul
+        display: flex
+        list-style: none
+
+        li
+            cursor: pointer
+            margin-right: 16px
+            &.selected
+                color: white
+                padding: 2px 6px
+                background-color: $ColorBlue
+                border-radius: 3px
+            &:last-child
+                margin-right: 0px
+            &:first-child
+                margin-right: 25.29px
+.project_wrapper
+    width: 877px
+    min-height: 112px
+    margin-bottom: 24px
+    background-color: #fff
+    border-radius: 6px
+    padding: 0 32px 24px 0
+    &:last-child
+        margin-bottom: 26px
+    .project_title
+        padding-top: 24px
+        margin: 0px auto 16px 32px
+        color: $ColorBlue
+        @include style( 24px, 500, normal)
+        text-decoration: none
+        display: inline-block
+    .project_description
+        margin: 0px auto 24px 32px
+        color: black
+        @include style( 16px, 400, normal)
