--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -11,10 +11,19 @@
         width: 800px
     .pagination_wrapper
         margin-right: 20px
+@media screen and ( max-width: 900px )
+    .project_wrapper
+        width: 750px
+@media screen and ( max-width: 860px )
+    .project_wrapper
+        width: 650px
+@media screen and ( max-width: 760px )
+    .project_wrapper
+        width: 600px
 @media screen and ( max-width: 650px )
     .search_wrapper 
         input
-            width: 100%
+            width: 350px
 @media screen and ( max-width: 500px )
     .search_wrapper 
         input
