--- a/src/css/App.css
+++ b/src/css/App.css
@@ -39,10 +39,13 @@
 
 .search_wrapper {
   position: relative;
+  width: 500px;
+  display: flex;
 }
 
 .search_wrapper input {
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
   height: 40px;
   padding: 8px 0px 8px 44px;
 }
@@ -225,7 +228,9 @@
   margin-bottom: 24px;
   background-color: #fff;
   border-radius: 6px;
-  padding: 0 32px 24px 0;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .project_wrapper:last-child {
@@ -233,8 +238,8 @@
 }
 
 .project_wrapper .project_title {
-  padding-top: 24px;
-  margin: 0px auto 16px 32px;
+  width: 100%;
+  margin: 24px auto 16px 32px;
   color: #0064EB;
   font-size: 24px;
   font-weight: 500;
@@ -244,7 +249,8 @@
 }
 
 .project_wrapper .project_description {
-  margin: 0px auto 24px 32px;
+  text-align: justify;
+  margin: 0px 68px 24px 32px;
   color: black;
   font-size: 16px;
   font-weight: 400;
@@ -253,61 +259,183 @@
 
 @media screen and (max-width: 1400px) {
   .project_wrapper {
+    width: 800px;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .project_wrapper {
     width: 700px;
   }
 }
 
 @media screen and (max-width: 1200px) {
   .project_wrapper {
+    width: 600px;
+  }
+  .project_wrapper .project_description {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .project_wrapper {
     width: 500px;
   }
 }
 
 @media screen and (max-width: 1000px) {
+  .project_wrapper {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .avatar, .author_info {
+    margin-left: 0;
+  }
   .main {
     flex-direction: column;
+  }
+  .avatar, .author_info {
+    text-align: center;
   }
   .project_wrapper {
     width: 800px;
   }
   .pagination_wrapper {
-    margin-right: 20px;
+    margin-left: 50px;
+    justify-content: center;
+  }
+  .main_repositories {
+    margin-left: 53px;
+  }
+  .follower_wrapper {
+    justify-content: center;
   }
 }
 
 @media screen and (max-width: 900px) {
   .project_wrapper {
-    width: 750px;
+    width: 770px;
+  }
+  .pagination_wrapper {
+    margin-right: 40px;
   }
 }
 
-@media screen and (max-width: 860px) {
+@media screen and (max-width: 855px) {
   .project_wrapper {
-    width: 650px;
+    width: 700px;
   }
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 780px) {
   .project_wrapper {
-    width: 600px;
+    width: 618px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .project_wrapper {
+    width: 560px;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .search_wrapper input {
-    width: 350px;
+  .project_wrapper {
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .search_wrapper {
+    margin-right: 20px;
+  }
+  .pagination_wrapper {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 585px) {
+  .pagination_wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .pagination_wrapper .amountPaginate {
+    margin-right: 0;
+  }
+  .pagination_wrapper ul {
+    margin: 20px 0;
+  }
+  .project_wrapper {
+    width: 450px;
+  }
+  .main_repositories {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .project_wrapper {
+    width: 430px;
+  }
+  .main_repositories {
+    margin-left: 20px;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .search_wrapper input {
-    width: 230px;
+  .logo {
+    margin-left: 16px;
+  }
+  .project_wrapper {
+    width: 400px;
+  }
+  .project_wrapper .project_title, .project_wrapper .project_description {
+    margin-left: 15px;
+  }
+  .main_repositories {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0;
+  }
+  .main_repositories h1 {
+    font-size: 28px;
+    text-align: center;
   }
 }
 
-@media screen and (max-width: 350px) {
-  .logo {
-    margin-left: 16px;
+@media screen and (max-width: 430px) {
+  .project_wrapper {
+    width: 350px;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .follower_wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .follower_wrapper .group_wrapper {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  .project_wrapper {
+    width: 280px;
+  }
+  .project_wrapper .project_title {
+    font-size: 20px;
+  }
+  .project_wrapper .project_description {
+    font-size: 14px;
+  }
+  .pagination_wrapper ul li {
+    margin-right: 10px;
+  }
+  .pagination_wrapper ul li:first-child {
+    margin-right: 10px;
   }
 }
 
