--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -9,8 +9,11 @@
     cursor: pointer
 .search_wrapper
     position: relative
+    width: 500px
+    display: flex
     input
-        width: 500px
+        width: 100%
+        max-width: 500px
         height: 40px
         padding: 8px 0px 8px 44px
     img
