--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,34 +1,111 @@
 @media screen and ( max-width: 1400px )
     .project_wrapper
+        width: 800px
+@media screen and ( max-width: 1300px )
+    .project_wrapper
         width: 700px
 @media screen and ( max-width: 1200px )
     .project_wrapper
+        width: 600px
+        .project_description
+            margin-right: 30px
+@media screen and ( max-width: 1100px )
+    .project_wrapper
         width: 500px
 @media screen and ( max-width: 1000px )
+    .project_wrapper
+        width: 400px
+@media screen and ( max-width: 920px )
+    .avatar, .author_info
+        margin-left: 0
     .main
         flex-direction: column
+    .avatar, .author_info
+        text-align: center
     .project_wrapper
         width: 800px
     .pagination_wrapper
-        margin-right: 20px
+        margin-left: 50px
+        justify-content: center
+    .main_repositories
+        margin-left: 53px
+    .follower_wrapper
+        justify-content: center
 @media screen and ( max-width: 900px )
     .project_wrapper
-        width: 750px
-@media screen and ( max-width: 860px )
+        width: 770px
+    .pagination_wrapper
+        margin-right: 40px
+@media screen and ( max-width: 855px )
     .project_wrapper
-        width: 650px
-@media screen and ( max-width: 760px )
+        width: 700px
+@media screen and ( max-width: 780px )
     .project_wrapper
-        width: 600px
+        width: 618px
+@media screen and ( max-width: 700px )
+    .project_wrapper
+        width: 560px
 @media screen and ( max-width: 650px )
-    .search_wrapper 
-        input
-            width: 350px
+    .project_wrapper
+        width: 500px
+@media screen and ( max-width: 620px )
+    .search_wrapper
+        margin-right: 20px
+    .pagination_wrapper
+        margin: 0
+@media screen and ( max-width: 585px )
+    .pagination_wrapper
+        flex-direction: column
+        align-items: center
+        .amountPaginate
+            margin-right: 0
+        ul
+            margin: 20px 0
+    .project_wrapper
+        width: 450px
+    .main_repositories
+        margin-left: 30px
+@media screen and ( max-width: 510px )
+    .project_wrapper
+        width: 430px
+    .main_repositories
+        margin-left: 20px
+
 @media screen and ( max-width: 500px )
-    .search_wrapper 
-        input
-            width: 230px
-@media screen and ( max-width: 350px )
     .logo
         margin-left: 16px
-    
+    .project_wrapper
+        width: 400px
+        .project_title, .project_description
+            margin-left: 15px
+    .main_repositories
+        display: flex
+        flex-direction: column
+        align-items: center
+        margin-left: 0
+        h1
+            font-size: 28px
+            text-align: center
+@media screen and ( max-width: 430px )
+    .project_wrapper
+        width: 350px
+@media screen and ( max-width: 370px )
+    .follower_wrapper
+        flex-direction: column
+        align-items: center
+        .group_wrapper
+            margin-right: 0
+            margin-bottom: 10px
+    .project_wrapper
+        width: 280px
+        .project_title
+            font-size: 20px
+        .project_description
+            font-size: 14px
+    .pagination_wrapper
+        ul
+            li
+                margin-right: 10px
+
+                &:first-child
+                    margin-right: 10px
