--- a/src/sass/_repositories.sass
+++ b/src/sass/_repositories.sass
@@ -10,7 +10,6 @@
 .pagination_wrapper
     display: flex
     justify-content: flex-end
-
     .amountPaginate
         margin-right: 23.59px
         @include style(14px, 400 , normal)
@@ -32,22 +31,26 @@
             &:first-child
                 margin-right: 25.29px
 .project_wrapper
+
     width: 877px
     min-height: 112px
     margin-bottom: 24px
     background-color: #fff
     border-radius: 6px
-    padding: 0 32px 24px 0
+    display: flex
+    flex-direction: column
+    flex: 1
     &:last-child
         margin-bottom: 26px
     .project_title
-        padding-top: 24px
-        margin: 0px auto 16px 32px
+        width: 100%
+        margin: 24px auto 16px 32px
         color: $ColorBlue
         @include style( 24px, 500, normal)
         text-decoration: none
         display: inline-block
     .project_description
-        margin: 0px auto 24px 32px
+        text-align: justify
+        margin: 0px 68px 24px 32px
         color: black
         @include style( 16px, 400, normal)
