--- a/src/sass/_template.sass
+++ b/src/sass/_template.sass
@@ -3,16 +3,20 @@ $ColorBlue: #0064EB
     font-size: $size
     font-weight: $weight
     font-style: $style
-
-@font-face 
+@keyframes spin
+    0%
+        transform: rotate(0deg)
+    100%
+        transform: rotate(360deg)
+@font-face
     font-family: 'Inter'
     src: url('../fonts/Inter-Regular.ttf')
     font-weight: 400
-@font-face 
+@font-face
     font-family: 'Inter'
     src: url('../fonts/Inter-Medium.ttf')
     font-weight: 500
-@font-face 
+@font-face
     font-family: 'Inter'
     src: url('../fonts/Inter-SemiBold.ttf')
     font-weight: 600
@@ -22,5 +26,3 @@ $ColorBlue: #0064EB
     box-sizing: border-box
     outline: none
     font-family: 'Inter'
-
-
